# selkies

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile
.devcontainer/features/desktop-selkies/src/: install-desktop-environment.sh  install.sh  start-selkies.sh  start-turnserver.sh
addons/: Dockerfile
addons/conda/: Dockerfile
addons/example/: Dockerfile  entrypoint.sh  selkies-entrypoint.sh  selkies-gstreamer-entrypoint.sh  supervisord.conf
addons/fake-udev/: README.md  build.sh  fake-libudev-core.c  libudev.h
addons/gst-web-core/: selkies-core.js  selkies-wr-core.js  selkies-ws-core.js
addons/gst-web-core/lib/: input.js  signaling.js  webrtc.js
addons/gst-web/src/: app.js  index.html  microphone.js
addons/js-interposer/: Makefile  build_deb.sh  joystick_interposer.c
addons/selkies-dashboard/: eslint.config.js  index.html  package.json  vite.config.js
addons/selkies-dashboard-wish/: .gitignore  copy-jsdb.js  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  vite.config.js
addons/selkies-dashboard-wish/public/: manifest.json  selkies-core.js
addons/selkies-dashboard-wish/src/: App.tsx  i18n.ts  index.css  main.jsx  translations-extra.ts  utils.ts
addons/selkies-dashboard-wish/src/components/: DashboardOverlay.tsx  logo.tsx
addons/selkies-dashboard-wish/src/lib/: utils.ts
addons/selkies-dashboard-wish/src/styles/: Overlay.css
addons/selkies-dashboard/src/: App.css  App.jsx  index.css  main.jsx  translations.js  utils.js
addons/selkies-dashboard/src/components/: DashboardOverlay.jsx  GamepadVisualizer.jsx  PlayerGamepadButton.jsx  Sidebar.jsx
addons/selkies-dashboard/src/styles/: Overlay.css
addons/selkies-web-core/: Dockerfile  README.md  clipboard-worker.js  gendb.js  index.html  selkies-core.js  selkies-wr-core.js  selkies-ws-core.js  vite.config.js
addons/selkies-web-core/lib/: clipboard-sync.js  clipboard-worker-bridge.js  conditional-settings.js  file-upload.js  gamepad.js  input.js  keyboard-layout.js  signaling.js  util.js  webrtc.js
addons/selkies-web-core/nginx/: footer.html
addons/turn-rest/: app.py
addons/uinput-bridge/: README.md  selkies_uinput_bridge.py
addons/universal-touch-gamepad/: app.js  index.html  universalTouchGamepad.js
dev/: build-gstreamer-ubuntu2004.sh  build-gstreamer-ubuntu2204.sh  build-gstreamer-ubuntu2404.sh  start-test-ubuntu2004.sh  start-test-ubuntu2204.sh  start-test-ubuntu2404.sh
docs/: README.md  component.md  design.md  development.md  faq.md  firewall.md  start.md  usage.md
src/: README.md
src/selkies/: __main__.py  audio_config.py  audit.py  display_utils.py  gpu_stats.py  input_handler.py  media_pipeline.py  rtc.py  selkies.py  settings.py  signaling_server.py  stream_server.py  wayland_typer.py  webrtc_mode.py  webrtc_signaling.py  webrtc_utils.py
src/selkies/Xlib/: XK.py  display.py  rdb.py  threaded.py  xauth.py
src/selkies/Xlib/ext/: composite.py  damage.py  dpms.py  ge.py  res.py  (+10 more)
src/selkies/ice/: __init__.py  candidate.py  ice.py  mdns.py  stun.py  turn.py  utils.py
src/selkies/legacy/: gamepad.py  media_pipeline.py  rtc.py  signalling_web.py  webrtc.py  webrtc_input.py  webrtc_signalling.py
src/selkies/tests/: test_nat1to1_sdp.py
src/selkies/webrtc/: __init__.py  rtcconfiguration.py  rtcdtlstransport.py  rtcicetransport.py  rtcpeerconnection.py  rtcrtpparameters.py  rtcrtpreceiver.py  rtcrtpsender.py  rtcrtptransceiver.py  rtcsctptransport.py  rtp.py  sdp.py
src/selkies_gstreamer/: websocket.py
(+49 files in other folders)
