# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at https://mozilla.org/MPL/2.0/.

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "selkies"
version = "0.0.0"
authors = [
    {name = "Dan Isla", email = "danisla@users.noreply.github.com"},
    {name = "Seungmin Kim", email = "8457324+ehfd@users.noreply.github.com"},
    {name = "Ryan Kuba", email = "ryankuba@gmail.com"},
]
description = "Open-Source Low-Latency Linux WebRTC HTML5 Remote Desktop and 3D Graphics / Game Streaming Platform"
readme = "README.md"
license = "MPL-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.9"
dependencies = [
    "prometheus_client",
    "msgpack",
    "psutil",
    "watchdog",
    "Pillow",
    "pixelflux",
    "pcmflux",
    "xkbcommon",
    # PulseAudio Microphone
    "pulsectl-asyncio",
    # WebRTC
    "aioice>=0.10.1,<1.0.0",
    "av",
    "cffi>=1.0.0",
    "cryptography>=44.0.0",
    "google-crc32c>=1.1",
    "pyee>=13.0.0",
    "pylibsrtp>=0.10.0",
    "pyopenssl>=25.0.0",
    "aiohttp>=3.7.0",
    "aiofiles>=25.1.0",
    # GPU stats: NVML in-process for NVIDIA (pure ctypes; no-op without NVIDIA) +
    # aitop's multi-vendor monitors for AMD/Intel/Apple.
    "nvidia-ml-py",
    "aitop",
]

[project.urls]
Homepage = "https://github.com/selkies-project/selkies"
"Bug Tracker" = "https://github.com/selkies-project/selkies/issues"

[project.scripts]
selkies = "selkies.__main__:main"
selkies-resize = "selkies.display_utils:entrypoint"

# Package Static web files as part of distribution wheel
[tool.setuptools.package-data]
"selkies.selkies_web" = ["**/*"]

[tool.setuptools.packages.find]
where = ["src"]

# Type checkers run as bug-finders on this largely unannotated codebase:
# inference-noise categories (Optional/attribute/argument inference on untyped
# values, guarded-import callables, aiohttp/av stub strictness) are disabled;
# every rule left enabled must stay clean.
# Run: pyright --pythonpath <env-python>   (from this directory)
[tool.pyright]
include = ["src/selkies"]
exclude = ["src/selkies/Xlib"]
pythonVersion = "3.12"
reportOptionalMemberAccess = "none"
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportOperatorIssue = "none"
reportOptionalOperand = "none"
reportOptionalCall = "none"
reportOptionalSubscript = "none"
reportOptionalIterable = "none"
reportCallIssue = "none"
reportReturnType = "none"
reportAssignmentType = "none"
reportGeneralTypeIssues = "none"
reportPrivateImportUsage = "none"
reportRedeclaration = "none"
reportIndexIssue = "none"

# Run: pyrefly check --python-interpreter-path <env-python>  (from this directory)
[tool.pyrefly]
project_includes = ["src/selkies"]
project_excludes = ["src/selkies/Xlib"]
python_version = "3.12"

[tool.pyrefly.errors]
missing-attribute = false
bad-argument-type = false
unsupported-operation = false
bad-index = false
bad-assignment = false
bad-return = false
not-callable = false
not-async = false
no-matching-overload = false
bad-specialization = false
